fixed links and spacing

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -139,3 +139,7 @@ a, a:visited {
 
 // injector
 // endinjector
+
+h2 {
+    margin-top: 40px;
+}
